{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 71,
  "lineage": "797131c5-4ccd-78ec-3303-d0d64a89d3d9",
  "resources": [
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:603713107417:subnet/subnet-045c15840aae18dc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045c15840aae18dc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "603713107417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0e6d4c26030dcf0ba"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:603713107417:loadbalancer/app/training-terraform-lb/f024d245f2b9ee92",
            "arn_suffix": "app/training-terraform-lb/f024d245f2b9ee92",
            "desync_mitigation_mode": "defensive",
            "dns_name": "training-terraform-lb-1044555092.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:603713107417:loadbalancer/app/training-terraform-lb/f024d245f2b9ee92",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "training-terraform-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-086443e5716dc5813"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-045c15840aae18dc0"
              },
              {
                "subnet_id": "subnet-04c83cde1ef6bf694"
              },
              {
                "subnet_id": "subnet-06f1fd8a8602f6055"
              }
            ],
            "subnets": [
              "subnet-045c15840aae18dc0",
              "subnet-04c83cde1ef6bf694",
              "subnet-06f1fd8a8602f6055"
            ],
            "vpc_id": "vpc-0e6d4c26030dcf0ba",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.alb.data.aws_subnet.this",
            "module.alb.random_id.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:603713107417:listener/app/training-terraform-lb/f024d245f2b9ee92/6a6eb79b57f6caca",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:603713107417:targetgroup/training-terraform-tg/1c2a1f8c5df1797e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:603713107417:listener/app/training-terraform-lb/f024d245f2b9ee92/6a6eb79b57f6caca",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:603713107417:loadbalancer/app/training-terraform-lb/f024d245f2b9ee92",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.alb.data.aws_subnet.this",
            "module.alb.random_id.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:603713107417:targetgroup/training-terraform-tg/1c2a1f8c5df1797e",
            "arn_suffix": "targetgroup/training-terraform-tg/1c2a1f8c5df1797e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:603713107417:targetgroup/training-terraform-tg/1c2a1f8c5df1797e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "training-terraform-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e6d4c26030dcf0ba"
          },
          "dependencies": [
            "module.alb.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:603713107417:security-group/sg-086443e5716dc5813",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-086443e5716dc5813",
            "ingress": [],
            "name": "training-terraform-alb-sg-7484927bacc5aa6c",
            "name_prefix": "",
            "owner_id": "603713107417",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e6d4c26030dcf0ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.data.aws_subnet.this",
            "module.alb.random_id.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-430017688",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-086443e5716dc5813",
            "security_group_rule_id": "sgr-0ff85b53d608a4045",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.alb.data.aws_subnet.this",
            "module.alb.random_id.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-4154481729",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-086443e5716dc5813",
            "security_group_rule_id": "sgr-09d1ed290b46eb6c8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.alb.data.aws_subnet.this",
            "module.alb.random_id.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-518872910",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-086443e5716dc5813",
            "security_group_rule_id": "sgr-04d2047bd74d294f5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.alb.data.aws_subnet.this",
            "module.alb.random_id.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:603713107417:internet-gateway/igw-0299998bcd4d579df",
            "id": "igw-0299998bcd4d579df",
            "owner_id": "603713107417",
            "tags": {
              "Name": "training-terraform-igw"
            },
            "tags_all": {
              "Name": "training-terraform-igw"
            },
            "vpc_id": "vpc-0e6d4c26030dcf0ba"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:603713107417:route-table/rtb-02fb040ee842c2498",
            "id": "rtb-02fb040ee842c2498",
            "owner_id": "603713107417",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0299998bcd4d579df",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "training-terraform-rt"
            },
            "tags_all": {
              "Name": "training-terraform-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6d4c26030dcf0ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea69cb788edff272",
            "route_table_id": "rtb-02fb040ee842c2498",
            "subnet_id": "subnet-045c15840aae18dc0"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7d589a124fdd905",
            "route_table_id": "rtb-02fb040ee842c2498",
            "subnet_id": "subnet-06f1fd8a8602f6055"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-1d",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ada69860a0463e5",
            "route_table_id": "rtb-02fb040ee842c2498",
            "subnet_id": "subnet-04c83cde1ef6bf694"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:603713107417:subnet/subnet-045c15840aae18dc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045c15840aae18dc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "603713107417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e6d4c26030dcf0ba"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:603713107417:subnet/subnet-06f1fd8a8602f6055",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f1fd8a8602f6055",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "603713107417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e6d4c26030dcf0ba"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-1d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:603713107417:subnet/subnet-04c83cde1ef6bf694",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c83cde1ef6bf694",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "603713107417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e6d4c26030dcf0ba"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:603713107417:vpc/vpc-0e6d4c26030dcf0ba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0abb6d8d7ff0b7a2a",
            "default_route_table_id": "rtb-06cd6dbfb4c295fc4",
            "default_security_group_id": "sg-0d2ff04361c744cbe",
            "dhcp_options_id": "dopt-0f705a35c53e52e7f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e6d4c26030dcf0ba",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06cd6dbfb4c295fc4",
            "owner_id": "603713107417",
            "tags": {
              "Name": "training-terraform-vpc"
            },
            "tags_all": {
              "Name": "training-terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}